--- a/2.2P_Task/public/index.html
+++ b/2.2P_Task/public/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Square Calculator</title>
+  <title>Addition Calculator</title>
 </head>
 <body>
-  <h1>Square Calculator</h1>
-  <form action="/square" method="GET">
-    <label for="num">Enter a number:</label>
-    <input type="text" id="num" name="num" required>
-    <button type="submit">Calculate Square</button>
+  <h1>Addition Calculator</h1>
+  <form action="/add" method="GET">
+    <label for="a">Enter first number:</label>
+    <input type="text" id="a" name="a" required>
+    <label for="b">Enter second number:</label>
+    <input type="text" id="b" name="b" required>
+    <button type="submit">Calculate Sum</button>
   </form>
 </body>
 </html>
