--- a/3.2P_Task/public/index.html
+++ b/3.2P_Task/public/index.html
@@ -1,56 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SIT 725 Prac 3 Enhanced</title>
-  <meta name="description" content="Enhanced template for SIT 725 Prac 3">
-  <meta name="author" content="Your Name">
-  <meta property="og:title" content="SIT 725 Prac 3 Enhanced">
-  <meta property="og:type" content="website">
-  <meta property="og:description" content="Interactive and fun Materialize components">
-
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- Custom Style Sheet -->
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Inspirational Quotes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <nav>
-        <div class="nav-wrapper navbar-size">
-          <a href="#" class="brand-logo"><img class="user-image-size" src="images/robot.png" /></a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a target="_blank" href="https://www.linkedin.com/in/dhanush-chinivar/">About Me</a></li>
-          </ul>
-        </div>
-    </nav>
-    <main class="main-body">
-      <div class="container">
-        <div class="row">
-          <div class="col s12 center-align">
-            <h1 id="heading">Welcome to SIT 725 Week 3</h1>
-            <p class="flow-text">Click the button below for some motivation!</p>
-          </div>
-          <div class="col s12 center-align">
-            <img class="materialboxed materialboxed-image hover-effect" src="images/livedemo.png">
-          </div>
-          <div class="col s12 center-align">
-            <a class="waves-effect waves-light btn click-me-button" id="clickMeButton">
-              <i class="material-icons left">auto_fix_high</i>Get Inspired
-            </a>
-          </div>
-          <div class="col s12 center-align">
-            <p id="quoteText" class="quote-text"></p>
-          </div>
-        </div>
-      </div>
-    </main>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="scripts.js"></script>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="nav-container">
+      <h2 class="logo">QuoteVibe</h2>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Main Content -->
+  <div class="container">
+    <h1>🌟 Daily Inspirational Quote</h1>
+    <div id="quote-box">
+      <p id="quote-text">Loading...</p>
+      <button id="new-quote">Get Another Quote</button>
+    </div>
+
+    <!-- Image Scroll Section -->
+    <h2>🌄 Inspirational Moments</h2>
+    <div class="image-scroll">
+      <img src="images/nature.png" alt="Nature">
+      <img src="images/sunrise.png" alt="Sunrise">
+      <img src="images/mountain.png" alt="Mountain">
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
